--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation" >
-    <string name="app_name">Spi Music</string>
+    <string name="app_name">Nuance</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Online accounts</string>
@@ -74,6 +74,9 @@
     <string name="error_permission_storage">Spi Music needs storage permission to access your music, please, grant it on next screen</string>
     <string name="error">Permission error</string>
     <string name="allow">allow</string>
+    <string name="local_library_title">Local Library</string>
+    <string name="your_music">Your Music</string>
+    <string name="favorites">Favorites</string>
 
 
 </resources>
